--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
     "@mui/material-nextjs": "^6.4.3",
+    "@next/third-parties": "^15.3.2",
     "embla-carousel-react": "^8.5.2",
     "formik": "^2.4.6",
     "next": "15.1.7",
